# mini-game-platform

./: .gitignore  LICENSE  README.md
.gemini/antigravity/scratch/mini-game-t36/: index.html  script.js
.gemini/antigravity/scratch/mini-game-t36/games/: brickbreaker.html  caro.html  flappy.html  snake.html  (+1 more)
backend/: .env.example  README.md  app.py  database.py  models.py  pyproject.toml  pytest.ini  requirements.txt  seed_database.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/middleware/: __init__.py  cors.py
backend/app/models/: __init__.py  base.py  category.py  game.py  stats.py
backend/app/routes/: categories.py  games.py  health.py  search.py
backend/app/schemas/: base.py  category_schema.py  game_schema.py
backend/app/utils/: game_scanner.py  helpers.py  validators.py
backend/games/game1/: game.json  index.html
backend/games/game1/css/: style.css
backend/games/game1/js/: game.js
backend/games/game2/: game.json  index.html
backend/games/game2/css/: style.css
backend/games/game2/js/: game.js
backend/migrations/: 001_create_tables.sql
backend/routes/: __init__.py  games.py  scores.py
backend/tests/: conftest.py  test_api.py  test_api_boundary.py  test_api_functional.py  test_models.py  test_routes_categories.py  test_routes_games.py  test_schemas.py  test_static_files.py  test_utils.py  test_validators.py
backend/validators/: __init__.py  game_validators.py
frontend/: index.html  login.html  script.js  style.css
frontend/games/: brickbreaker.html  caro.html  flappy.html  snake.html  tetris.html
