[project]
name = "mini-game-platform-backend"
version = "0.1.0"
description = "Simple backend for mini-game platform coursework"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "Flask==3.0.3",
    "SQLAlchemy==2.0.36",
    "pytest==8.3.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
